--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "jquery": "^3.4.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
-    "slick-carousel": "^1.8.1"
+    "redux": "^4.0.1",
+    "slick-carousel": "^1.8.1",
+    "sweetalert2": "^8.10.7"
   },
   "scripts": {
     "start": "react-scripts start",
